overflow problem solved

--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ html {
 }
 body {
   background-color: var(--white);
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 * {
   margin: 0;
